Add location to the urgency model. Update swagger files.
